Refactor and cleanup codebase for improved clarity and maintainability.
Removed unused/duplicate code, streamlined logic, fixed validation and role authorization issues, and unified UI labels. Additionally, adjusted Russian error messages to English for consistency. Introduced better formatting for dates.